--- a/src/components/ResponseDisplay.scss
+++ b/src/components/ResponseDisplay.scss
@@ -15,6 +15,14 @@
   overflow-y: auto;
   animation: fadeInUp 0.5s ease-out;
 
+  // In producer mode, let parent control height
+  .producer-mode-content & {
+    max-height: none;
+    height: 100%;
+    margin: 0;
+    max-width: 100%;
+  }
+
   .response-content {
     display: flex;
     flex-direction: column;
